Bottom Menu and Login Page

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -1,15 +1,86 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-        <title>Blank App</title>
-    </head>
-    <body>
-        <script type="text/javascript" src="cordova.js"></script>
-  
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title>HIVLessPHL</title>
+</head>
+<body>
 
-<a href="a.htm"> Test</a>
+    <script src="js/jquery-3.3.1.js"></script>
 
-  </body>
+    <script src="js/bootstrap.js"></script>
+    <link href="css/bootstrap-theme.css" rel="stylesheet" />
+    <link href="css/bootstrap.css" rel="stylesheet" />
+
+
+
+    <div class="container">
+        <div class="col-md-4">
+
+        </div>
+        <div class="col-md-4">
+            <form class="form-signin">
+                <h2 class="form-signin-heading">Please sign in</h2>
+                <label for="inputEmail" class="sr-only">Email address</label>
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+                <label for="inputPassword" class="sr-only">Password</label>
+                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="remember-me"> Remember me
+                    </label>
+                </div>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            </form>
+        </div>
+        <div class="col-md-4">
+
+        </div>
+
+    </div>
+
+    <nav class="navbar navbar-fixed-bottom" role="navigation">
+        <div>
+            <div class="col-xs-3">
+                <div class="text-center">
+                    <span class="glyphicon glyphicon-home" />
+                </div>
+                <div class="text-center">
+                    Home
+                </div>
+
+            </div>
+            <div class="col-xs-3 active">
+                <div class="text-center">
+                    <span class="glyphicon glyphicon-map-marker" />
+                </div>
+                <div class="text-center">
+                    Find
+                </div>
+
+            </div>
+            <div class="col-xs-3">
+                <div class="text-center">
+                    <span class="glyphicon glyphicon-book" />
+                </div>
+                <div class="text-center">
+                    HIV Info
+                </div>
+
+            </div>
+            <div class="col-xs-3">
+                <div class="text-center">
+                    <span class="glyphicon glyphicon-user" />
+                </div>
+                <div class="text-center">
+                   Talk to Us
+                </div>
+
+            </div>
+        </div><!-- /.container-fluid -->
+    </nav>
+
+
+</body>
 </html>
